<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background_box">


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/linear_box"
        android:padding="10dp">

        <EditText
            android:id="@+id/reg_name_text"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/reg_username_text"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/reg_email_text"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/reg_password_text"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColorHint="@color/hint" />

        <EditText
            android:id="@+id/reg_confirm_text"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/hint" />
    </LinearLayout>

    <Button
        android:id="@+id/reg_create_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/create_account"
        android:background="@drawable/box"
        android:padding="15dp"/>

</LinearLayout>